--- a/reports/Order/Reports-Automation-2025-12-04-12-12-20.html
+++ b/reports/Order/Reports-Automation-2025-12-04-12-12-20.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">dez. 4, 2025 09:29:20 AM</span></a>
+<a href="#"><span class="badge badge-primary">dez. 4, 2025 12:12:19 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">TC002 - Should create an order using the default address</p>
             <p class="text-sm">
-              <span>09:29:32</span> / <span>00:00:23:573</span>
+              <span>12:13:18</span> / <span>00:00:23:143</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">TC002 - Should create an order using the default address</h5>
-<span class='badge badge-success'>12.04.2025 09:29:32</span>
-<span class='badge badge-danger'>12.04.2025 09:29:56</span>
-<span class='badge badge-default'>00:00:23:573</span>
+<span class='badge badge-success'>12.04.2025 12:13:18</span>
+<span class='badge badge-danger'>12.04.2025 12:13:41</span>
+<span class='badge badge-default'>00:00:23:143</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>09:29:56</td>
+        <td>12:13:41</td>
         <td>
           <span class='badge white-text green'>Test executed successfully!</span>
         </td>
@@ -121,7 +121,7 @@
           <div class="test-detail">
             <p class="name">TC001 - Should create an order using the registered address</p>
             <p class="text-sm">
-              <span>09:30:07</span> / <span>00:00:11:654</span>
+              <span>12:13:52</span> / <span>00:00:09:417</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">TC001 - Should create an order using the registered address</h5>
-<span class='badge badge-success'>12.04.2025 09:30:07</span>
-<span class='badge badge-danger'>12.04.2025 09:30:19</span>
-<span class='badge badge-default'>00:00:11:654</span>
+<span class='badge badge-success'>12.04.2025 12:13:52</span>
+<span class='badge badge-danger'>12.04.2025 12:14:01</span>
+<span class='badge badge-default'>00:00:09:417</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -144,7 +144,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>09:30:19</td>
+        <td>12:14:01</td>
         <td>
           <span class='badge white-text green'>Test executed successfully!</span>
         </td>
@@ -161,7 +161,7 @@
           <div class="test-detail">
             <p class="name">TC003 - Should create an order using new address data</p>
             <p class="text-sm">
-              <span>09:30:29</span> / <span>00:00:21:656</span>
+              <span>12:14:12</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -170,29 +170,15 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">TC003 - Should create an order using new address data</h5>
-<span class='badge badge-success'>12.04.2025 09:30:29</span>
-<span class='badge badge-danger'>12.04.2025 09:30:51</span>
-<span class='badge badge-default'>00:00:21:656</span>
+<span class='badge badge-success'>12.04.2025 12:14:12</span>
+<span class='badge badge-danger'>12.04.2025 12:14:12</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>09:30:51</td>
-        <td>
-          <span class='badge white-text green'>Test executed successfully!</span>
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
+</div>          </div>
         </li>
       </ul>
     </div>
@@ -208,13 +194,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>dez. 4, 2025 09:29:20 AM</h3>
+<h3>dez. 4, 2025 12:12:19 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>dez. 4, 2025 09:30:51 AM</h3>
+<h3>dez. 4, 2025 12:14:41 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -265,7 +251,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>3</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -284,7 +270,7 @@
 </div></div>
 <script>
 var timeline = {
-"TC002 - Should create an order using the default address":23.573,"TC001 - Should create an order using the registered address":11.654,"TC003 - Should create an order using new address data":21.656
+"TC002 - Should create an order using the default address":23.143,"TC001 - Should create an order using the registered address":9.417,"TC003 - Should create an order using new address data":0
 };
 </script>
 <div class="row">
@@ -310,7 +296,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 3,
+passEvents: 2,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
